# stevensMathLib

./: .gitignore  CMakeLists.txt  README.md  example.cpp  stevensMathLib.h
benchmarks/: CMakeLists.txt  benchmark_main.cpp  benchmark_random.cpp  benchmark_rounding.cpp
tests/: CMakeLists.txt  test_conversion.cpp  test_main.cpp  test_random.cpp  test_range.cpp  test_rounding.cpp
